[gd_scene load_steps=2 format=3 uid="uid://bk8j7n4p5m3x"]

[ext_resource type="Script" path="res://scripts/BiscuitInfoDisplay.gd" id="1_biscuit"]

[node name="BiscuitInfoDisplay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_biscuit")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
modulate = Color(1, 1, 1, 0.9)

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="BiscuitName" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Supreme Deluxe Biscuit"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Description" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "A biscuit that crafted to perfection and melts in your mouth"
horizontal_alignment = 1
autowrap_mode = 2

[node name="PointsContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BasePointsLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/PointsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Base Points: 75"

[node name="VSeparator" type="VSeparator" parent="Panel/MarginContainer/VBoxContainer/PointsContainer"]
layout_mode = 2

[node name="ModifierPointsLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/PointsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Modifier: +25"

[node name="VSeparator2" type="VSeparator" parent="Panel/MarginContainer/VBoxContainer/PointsContainer"]
layout_mode = 2

[node name="TotalPointsLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/PointsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(1, 0.8, 0, 1)
text = "Total: 100"

[node name="HSeparator2" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="IngredientsLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Ingredients:"

[node name="IngredientsList" type="RichTextLabel" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 60)
theme_override_font_sizes/normal_font_size = 12
fit_content = true
text = "‚Ä¢ Flour (10 pts)
‚Ä¢ Sugar (15 pts)
‚Ä¢ Butter (20 pts)
‚Ä¢ Magic Sparkles (30 pts)"

[node name="SpecialAttributes" type="RichTextLabel" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 30)
theme_override_font_sizes/normal_font_size = 12
theme_override_colors/default_color = Color(0.8, 0.6, 1, 1)
fit_content = true
text = "[color=gold]‚ú® Shiny[/color] [color=red]üå∂Ô∏è Spicy[/color]"
